Modified CommandPropertyDelegate class.